src/test/ui/invalid/invalid-no-sanitize.stderr
error: invalid argument for `no_sanitize`
  --> $DIR/invalid-no-sanitize.rs:3:15
   |
LL | #[no_sanitize(brontosaurus)]
   |               ^^^^^^^^^^^^
   |
   = note: expected one of: `address`, `cfi`, `hwaddress`, `memory`, `memtag`, or `thread`

error: aborting due to previous error

